@@ -5,11 +5,13 @@
 #include "UserInterface/Components/MainComponent.h"
 #include "UserInterface/Components/MainPanel/DateTime/Date.h"
 #include "UserInterface/Components/MainPanel/DateTime/Time.h"
+#include "UserInterface/Components/MainPanel/DateTime/AnalogClocks.h"
 
 class DateTime : public MainComponent {
 
 	public:
 
+		bool handleVerticalSwipe(int8_t vector);
 		void setShouldReRender(bool shouldReRender);
 		void render();
 		DateTime();
@@ -18,5 +20,8 @@ class DateTime : public MainComponent {
 
 		Date *_date;
 		Time *_time;
+		AnalogClocks *_clocks;
+
+		bool _isDigital = false;
 
 };
